--- a/views/dashboard/partials/leftmenu.ejs
+++ b/views/dashboard/partials/leftmenu.ejs
@@ -34,10 +34,7 @@
         <li class="header">HEADER</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="/private/users/profile"><i class="fa fa-link"></i> <span>Profile Info</span></a></li>
-        <li><a href="/private/categories/categoryList"><i class="fa fa-link"></i> <span>Categories</span></a></li>
-        <li><a href="/private/products/getByuserID"><i class="fa fa-link"></i> <span>Product List</span></a></li>
-        <li><a href="/private/products/product_statistic"><i class="fa fa-link"></i> <span>Product Statistic</span></a></li>
-        <li><a href="/private/products/inventory"><i class="fa fa-link"></i> <span>Inventory</span></a></li>
+        <li><a href="/private/area/get_all_by_user_id"><i class="fa fa-link"></i> <span>Area List</span></a></li>        
         <!-- <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
             <span class="pull-right-container">
