--- a/views/public/login.ejs
+++ b/views/public/login.ejs
@@ -70,10 +70,10 @@
                                 <h2 class="text-center">login</h2>
                                 <form method="post" action="/users/login">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="login-usr-nm" placeholder="User Name" name="email">
+                                        <input type="text" class="form-control" id="login-usr-nm" placeholder="User Name" name="email" value="a@vinhsang.com">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control" id="login-pass" placeholder="Password" name="password">
+                                        <input type="password" class="form-control" id="login-pass" placeholder="Password" name="password" value="123456">
                                     </div>
                                     <div class="checkbox">
                                         <label><input type="checkbox"> Remember me </label><span><a href="#">Forget Password?</a></span>
